tests/init/neg/i15883.scala
class A {
  val a = b
  val b = 1  // error
}
